[tool.poetry]
name = "tasker"
version = "0.1.0"
description = "High Level Task Executor"
authors = ["Yair Dar <yair.dar@outlook.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "3.8+"
fire = "^0.4.0"
pydantic = "^1.8.2"
loguru = "^0.5.3"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypypi = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
